--- a/src/assets/i18n/cn_tra.json
+++ b/src/assets/i18n/cn_tra.json
@@ -142,25 +142,25 @@
     "DMG_RATE_UP_SET": "聖遺物傷害倍率增加值",
     "HEALING_RATE_UP_SKILL": "元素技能治療倍率增加值",
     "HEALING_RATE_UP_ELEMENTAL_BURST": "元素爆發治療倍率增加值",
-    "DMG_RATE_MULTI_CRYO": "冰元素傷害倍率乘算值",
-    "DMG_RATE_MULTI_ANEMO": "風元素傷害倍率乘算值",
-    "DMG_RATE_MULTI_PHYSICAL": "物理傷害倍率乘算值",
-    "DMG_RATE_MULTI_ELECTRO": "雷元素傷害倍率乘算值",
-    "DMG_RATE_MULTI_GEO": "岩元素傷害倍率乘算值",
-    "DMG_RATE_MULTI_PYRO": "火元素傷害倍率乘算值",
-    "DMG_RATE_MULTI_HYDRO": "水元素傷害倍率乘算值",
-    "DMG_RATE_MULTI_DENDRO": "草元素傷害倍率乘算值",
-    "DMG_RATE_MULTI_ALL": "全傷害倍率乘算值",
-    "DMG_RATE_MULTI_NORMAL": "基本攻擊傷害倍率乘算值",
-    "DMG_RATE_MULTI_CHARGED": "重擊傷害倍率乘算值",
-    "DMG_RATE_MULTI_PLUNGING": "下落攻擊傷害倍率乘算值",
-    "DMG_RATE_MULTI_SKILL": "元素技能傷害倍率乘算值",
-    "DMG_RATE_MULTI_ELEMENTAL_BURST": "元素爆發傷害倍率乘算值",
-    "DMG_RATE_MULTI_WEAPON": "武器傷害倍率乘算值",
-    "DMG_RATE_MULTI_OTHER": "其他傷害倍率乘算值",
-    "DMG_RATE_MULTI_SET": "聖遺物傷害倍率乘算值",
-    "HEALING_RATE_MULTI_SKILL": "元素技能治療倍率乘算值",
-    "HEALING_RATE_MULTI_ELEMENTAL_BURST": "元素爆發治療倍率乘算值",
+    "DMG_RATE_MULTI_CRYO": "冰元素傷害倍率乘算加成",
+    "DMG_RATE_MULTI_ANEMO": "風元素傷害倍率乘算加成",
+    "DMG_RATE_MULTI_PHYSICAL": "物理傷害倍率乘算加成",
+    "DMG_RATE_MULTI_ELECTRO": "雷元素傷害倍率乘算加成",
+    "DMG_RATE_MULTI_GEO": "岩元素傷害倍率乘算加成",
+    "DMG_RATE_MULTI_PYRO": "火元素傷害倍率乘算加成",
+    "DMG_RATE_MULTI_HYDRO": "水元素傷害倍率乘算加成",
+    "DMG_RATE_MULTI_DENDRO": "草元素傷害倍率乘算加成",
+    "DMG_RATE_MULTI_ALL": "全傷害倍率乘算加成",
+    "DMG_RATE_MULTI_NORMAL": "基本攻擊傷害倍率乘算加成",
+    "DMG_RATE_MULTI_CHARGED": "重擊傷害倍率乘算加成",
+    "DMG_RATE_MULTI_PLUNGING": "下落攻擊傷害倍率乘算加成",
+    "DMG_RATE_MULTI_SKILL": "元素技能傷害倍率乘算加成",
+    "DMG_RATE_MULTI_ELEMENTAL_BURST": "元素爆發傷害倍率乘算加成",
+    "DMG_RATE_MULTI_WEAPON": "武器傷害倍率乘算加成",
+    "DMG_RATE_MULTI_OTHER": "其他傷害倍率乘算加成",
+    "DMG_RATE_MULTI_SET": "聖遺物傷害倍率乘算加成",
+    "HEALING_RATE_MULTI_SKILL": "元素技能治療倍率乘算加成",
+    "HEALING_RATE_MULTI_ELEMENTAL_BURST": "元素爆發治療倍率乘算加成",
     "DMG_VAL_UP_CRYO": "冰元素傷害增加值",
     "DMG_VAL_UP_ANEMO": "風元素傷害增加值",
     "DMG_VAL_UP_PHYSICAL": "物理傷害增加值",
