--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -142,25 +142,25 @@
     "DMG_RATE_UP_SET": "Artifact DMG Multiplier Increase",
     "HEALING_RATE_UP_SKILL": "Skill Healing Multiplier Increase",
     "HEALING_RATE_UP_ELEMENTAL_BURST": "Elemental Burst Healing Multiplier Increase",
-    "DMG_RATE_MULTI_CRYO": "Cryo DMG Multiplier",
-    "DMG_RATE_MULTI_ANEMO": "Anemo DMG Multiplier",
-    "DMG_RATE_MULTI_PHYSICAL": "Physical DMG Multiplier",
-    "DMG_RATE_MULTI_ELECTRO": "Electro DMG Multiplier",
-    "DMG_RATE_MULTI_GEO": "Geo DMG Multiplier",
-    "DMG_RATE_MULTI_PYRO": "Pyro DMG Multiplier",
-    "DMG_RATE_MULTI_HYDRO": "Hydro DMG Multiplier",
-    "DMG_RATE_MULTI_DENDRO": "Dendro DMG Multiplier",
-    "DMG_RATE_MULTI_ALL": "All Element DMG Multiplier",
-    "DMG_RATE_MULTI_NORMAL": "Normal DMG Multiplier",
-    "DMG_RATE_MULTI_CHARGED": "Charged DMG Multiplier",
-    "DMG_RATE_MULTI_PLUNGING": "Plunging DMG Multiplier",
-    "DMG_RATE_MULTI_SKILL": "Skill DMG Multiplier",
-    "DMG_RATE_MULTI_ELEMENTAL_BURST": "Elemental Burst DMG Multiplier",
-    "DMG_RATE_MULTI_WEAPON": "Weapon DMG Multiplier",
-    "DMG_RATE_MULTI_OTHER": "Other DMG Multiplier",
-    "DMG_RATE_MULTI_SET": "Artifact DMG Multiplier",
-    "HEALING_RATE_MULTI_SKILL": "Skill Healing Multiplier",
-    "HEALING_RATE_MULTI_ELEMENTAL_BURST": "Elemental Burst Healing Multiplier",
+    "DMG_RATE_MULTI_CRYO": "Cryo DMG Multiplier Bonus",
+    "DMG_RATE_MULTI_ANEMO": "Anemo DMG Multiplier Bonus",
+    "DMG_RATE_MULTI_PHYSICAL": "Physical DMG Multiplier Bonus",
+    "DMG_RATE_MULTI_ELECTRO": "Electro DMG Multiplier Bonus",
+    "DMG_RATE_MULTI_GEO": "Geo DMG Multiplie Bonusr",
+    "DMG_RATE_MULTI_PYRO": "Pyro DMG Multiplie Bonusr",
+    "DMG_RATE_MULTI_HYDRO": "Hydro DMG Multiplier Bonus",
+    "DMG_RATE_MULTI_DENDRO": "Dendro DMG Multiplie Bonusr",
+    "DMG_RATE_MULTI_ALL": "All Element DMG Multiplier Bonus",
+    "DMG_RATE_MULTI_NORMAL": "Normal DMG Multiplier Bonus",
+    "DMG_RATE_MULTI_CHARGED": "Charged DMG Multiplier Bonus",
+    "DMG_RATE_MULTI_PLUNGING": "Plunging DMG Multiplier Bonus",
+    "DMG_RATE_MULTI_SKILL": "Skill DMG Multiplier Bonus",
+    "DMG_RATE_MULTI_ELEMENTAL_BURST": "Elemental Burst DMG Multiplier Bonus",
+    "DMG_RATE_MULTI_WEAPON": "Weapon DMG Multiplier Bonus",
+    "DMG_RATE_MULTI_OTHER": "Other DMG Multiplie Bonusr",
+    "DMG_RATE_MULTI_SET": "Artifact DMG Multiplier Bonus",
+    "HEALING_RATE_MULTI_SKILL": "Skill Healing Multiplier Bonus",
+    "HEALING_RATE_MULTI_ELEMENTAL_BURST": "Elemental Burst Healing Multiplier Bonus",
     "DMG_VAL_UP_CRYO": "Cryo DMG Increase",
     "DMG_VAL_UP_ANEMO": "Anemo DMG Increase",
     "DMG_VAL_UP_PHYSICAL": "Physical DMG Increase",
