--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -142,25 +142,25 @@
     "DMG_RATE_UP_SET": "聖遺物ダメージ倍率アップ値",
     "HEALING_RATE_UP_SKILL": "元素スキル治療倍率アップ値",
     "HEALING_RATE_UP_ELEMENTAL_BURST": "元素爆発治療倍率アップ値",
-    "DMG_RATE_MULTI_CRYO": "氷元素ダメージ倍率乗算値",
-    "DMG_RATE_MULTI_ANEMO": "風元素ダメージ倍率乗算値",
-    "DMG_RATE_MULTI_PHYSICAL": "物理ダメージ倍率乗算値",
-    "DMG_RATE_MULTI_ELECTRO": "雷元素ダメージ倍率乗算値",
-    "DMG_RATE_MULTI_GEO": "岩元素ダメージ倍率乗算値",
-    "DMG_RATE_MULTI_PYRO": "火元素ダメージ倍率乗算値",
-    "DMG_RATE_MULTI_HYDRO": "水元素ダメージ倍率乗算値",
-    "DMG_RATE_MULTI_DENDRO": "草元素ダメージ倍率乗算値",
-    "DMG_RATE_MULTI_ALL": "全ダメージ倍率乗算値",
-    "DMG_RATE_MULTI_NORMAL": "基本攻撃ダメージ倍率乗算値",
-    "DMG_RATE_MULTI_CHARGED": "重撃ダメージ倍率乗算値",
-    "DMG_RATE_MULTI_PLUNGING": "落下攻撃ダメージ倍率乗算値",
-    "DMG_RATE_MULTI_SKILL": "元素スキルダメージ倍率乗算値",
-    "DMG_RATE_MULTI_ELEMENTAL_BURST": "元素爆発ダメージ倍率乗算値",
-    "DMG_RATE_MULTI_WEAPON": "武器ダメージ倍率乗算値",
-    "DMG_RATE_MULTI_OTHER": "その他ダメージ倍率乗算値",
-    "DMG_RATE_MULTI_SET": "聖遺物ダメージ倍率乗算値",
-    "HEALING_RATE_MULTI_SKILL": "元素スキル治療倍率乗算値",
-    "HEALING_RATE_MULTI_ELEMENTAL_BURST": "元素爆発治療倍率乗算値",
+    "DMG_RATE_MULTI_CRYO": "氷元素ダメージ倍率乗算ボーナス",
+    "DMG_RATE_MULTI_ANEMO": "風元素ダメージ倍率乗算ボーナス",
+    "DMG_RATE_MULTI_PHYSICAL": "物理ダメージ倍率乗算ボーナス",
+    "DMG_RATE_MULTI_ELECTRO": "雷元素ダメージ倍率乗算ボーナス",
+    "DMG_RATE_MULTI_GEO": "岩元素ダメージ倍率乗算ボーナス",
+    "DMG_RATE_MULTI_PYRO": "火元素ダメージ倍率乗算ボーナス",
+    "DMG_RATE_MULTI_HYDRO": "水元素ダメージ倍率乗算ボーナス",
+    "DMG_RATE_MULTI_DENDRO": "草元素ダメージ倍率乗算ボーナス",
+    "DMG_RATE_MULTI_ALL": "全ダメージ倍率乗算ボーナス",
+    "DMG_RATE_MULTI_NORMAL": "基本攻撃ダメージ倍率乗算ボーナス",
+    "DMG_RATE_MULTI_CHARGED": "重撃ダメージ倍率乗算ボーナス",
+    "DMG_RATE_MULTI_PLUNGING": "落下攻撃ダメージ倍率乗算ボーナス",
+    "DMG_RATE_MULTI_SKILL": "元素スキルダメージ倍率乗算ボーナス",
+    "DMG_RATE_MULTI_ELEMENTAL_BURST": "元素爆発ダメージ倍率乗算ボーナス",
+    "DMG_RATE_MULTI_WEAPON": "武器ダメージ倍率乗算ボーナス",
+    "DMG_RATE_MULTI_OTHER": "その他ダメージ倍率乗算ボーナス",
+    "DMG_RATE_MULTI_SET": "聖遺物ダメージ倍率乗算ボーナス",
+    "HEALING_RATE_MULTI_SKILL": "元素スキル治療倍率乗算ボーナス",
+    "HEALING_RATE_MULTI_ELEMENTAL_BURST": "元素爆発治療倍率乗算ボーナス",
     "DMG_VAL_UP_CRYO": "氷元素ダメージアップ値",
     "DMG_VAL_UP_ANEMO": "風元素ダメージアップ値",
     "DMG_VAL_UP_PHYSICAL": "物理ダメージアップ値",
