--- a/src/assets/i18n/cn_sim.json
+++ b/src/assets/i18n/cn_sim.json
@@ -142,25 +142,25 @@
     "DMG_RATE_UP_SET": "圣遗物伤害倍率增加值",
     "HEALING_RATE_UP_SKILL": "元素技能治疗倍率增加值",
     "HEALING_RATE_UP_ELEMENTAL_BURST": "元素爆发治疗倍率增加值",
-    "DMG_RATE_MULTI_CRYO": "冰元素伤害倍率乘算值",
-    "DMG_RATE_MULTI_ANEMO": "风元素伤害倍率乘算值",
-    "DMG_RATE_MULTI_PHYSICAL": "物理伤害倍率乘算值",
-    "DMG_RATE_MULTI_ELECTRO": "雷元素伤害倍率乘算值",
-    "DMG_RATE_MULTI_GEO": "岩元素伤害倍率乘算值",
-    "DMG_RATE_MULTI_PYRO": "火元素伤害倍率乘算值",
-    "DMG_RATE_MULTI_HYDRO": "水元素伤害倍率乘算值",
-    "DMG_RATE_MULTI_DENDRO": "草元素伤害倍率乘算值",
-    "DMG_RATE_MULTI_ALL": "全伤害倍率乘算值",
-    "DMG_RATE_MULTI_NORMAL": "基本攻击伤害倍率乘算值",
-    "DMG_RATE_MULTI_CHARGED": "重击伤害倍率乘算值",
-    "DMG_RATE_MULTI_PLUNGING": "下落攻击伤害倍率乘算值",
-    "DMG_RATE_MULTI_SKILL": "元素技能伤害倍率乘算值",
-    "DMG_RATE_MULTI_ELEMENTAL_BURST": "元素爆发伤害倍率乘算值",
-    "DMG_RATE_MULTI_WEAPON": "武器伤害倍率乘算值",
-    "DMG_RATE_MULTI_OTHER": "其他伤害倍率乘算值",
-    "DMG_RATE_MULTI_SET": "圣遗物伤害倍率乘算值",
-    "HEALING_RATE_MULTI_SKILL": "元素技能治疗倍率乘算值",
-    "HEALING_RATE_MULTI_ELEMENTAL_BURST": "元素爆发治疗倍率乘算值",
+    "DMG_RATE_MULTI_CRYO": "冰元素伤害倍率乘算加成",
+    "DMG_RATE_MULTI_ANEMO": "风元素伤害倍率乘算加成",
+    "DMG_RATE_MULTI_PHYSICAL": "物理伤害倍率乘算加成",
+    "DMG_RATE_MULTI_ELECTRO": "雷元素伤害倍率乘算加成",
+    "DMG_RATE_MULTI_GEO": "岩元素伤害倍率乘算加成",
+    "DMG_RATE_MULTI_PYRO": "火元素伤害倍率乘算加成",
+    "DMG_RATE_MULTI_HYDRO": "水元素伤害倍率乘算加成",
+    "DMG_RATE_MULTI_DENDRO": "草元素伤害倍率乘算加成",
+    "DMG_RATE_MULTI_ALL": "全伤害倍率乘算加成",
+    "DMG_RATE_MULTI_NORMAL": "基本攻击伤害倍率乘算加成",
+    "DMG_RATE_MULTI_CHARGED": "重击伤害倍率乘算加成",
+    "DMG_RATE_MULTI_PLUNGING": "下落攻击伤害倍率乘算加成",
+    "DMG_RATE_MULTI_SKILL": "元素技能伤害倍率乘算加成",
+    "DMG_RATE_MULTI_ELEMENTAL_BURST": "元素爆发伤害倍率乘算加成",
+    "DMG_RATE_MULTI_WEAPON": "武器伤害倍率乘算加成",
+    "DMG_RATE_MULTI_OTHER": "其他伤害倍率乘算加成",
+    "DMG_RATE_MULTI_SET": "圣遗物伤害倍率乘算加成",
+    "HEALING_RATE_MULTI_SKILL": "元素技能治疗倍率乘算加成",
+    "HEALING_RATE_MULTI_ELEMENTAL_BURST": "元素爆发治疗倍率乘算加成",
     "DMG_VAL_UP_CRYO": "冰元素伤害增加值",
     "DMG_VAL_UP_ANEMO": "风元素伤害增加值",
     "DMG_VAL_UP_PHYSICAL": "物理伤害增加值",
