--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -146,10 +146,10 @@
     "DMG_RATE_MULTI_ANEMO": "Anemo DMG Multiplier Bonus",
     "DMG_RATE_MULTI_PHYSICAL": "Physical DMG Multiplier Bonus",
     "DMG_RATE_MULTI_ELECTRO": "Electro DMG Multiplier Bonus",
-    "DMG_RATE_MULTI_GEO": "Geo DMG Multiplie Bonusr",
-    "DMG_RATE_MULTI_PYRO": "Pyro DMG Multiplie Bonusr",
+    "DMG_RATE_MULTI_GEO": "Geo DMG Multiplier Bonus",
+    "DMG_RATE_MULTI_PYRO": "Pyro DMG Multiplier Bonus",
     "DMG_RATE_MULTI_HYDRO": "Hydro DMG Multiplier Bonus",
-    "DMG_RATE_MULTI_DENDRO": "Dendro DMG Multiplie Bonusr",
+    "DMG_RATE_MULTI_DENDRO": "Dendro DMG Multiplier Bonus",
     "DMG_RATE_MULTI_ALL": "All Element DMG Multiplier Bonus",
     "DMG_RATE_MULTI_NORMAL": "Normal DMG Multiplier Bonus",
     "DMG_RATE_MULTI_CHARGED": "Charged DMG Multiplier Bonus",
