--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -157,7 +157,7 @@
     "DMG_RATE_MULTI_SKILL": "Skill DMG Multiplier Bonus",
     "DMG_RATE_MULTI_ELEMENTAL_BURST": "Elemental Burst DMG Multiplier Bonus",
     "DMG_RATE_MULTI_WEAPON": "Weapon DMG Multiplier Bonus",
-    "DMG_RATE_MULTI_OTHER": "Other DMG Multiplie Bonusr",
+    "DMG_RATE_MULTI_OTHER": "Other DMG Multiplier Bonus",
     "DMG_RATE_MULTI_SET": "Artifact DMG Multiplier Bonus",
     "HEALING_RATE_MULTI_SKILL": "Skill Healing Multiplier Bonus",
     "HEALING_RATE_MULTI_ELEMENTAL_BURST": "Elemental Burst Healing Multiplier Bonus",
