--- a/src/assets/i18n/cn_sim.json
+++ b/src/assets/i18n/cn_sim.json
@@ -395,7 +395,8 @@
     "TRAVELER_TORRENT_SURGE": "喷发激流",
     "TRAVELER_DEWDROP": "露滴",
     "WRIOTHESLEY_REBUKE": "惩戒·凌跃拳",
-    "NEUVILLETTE_EQUITABLE_JUDGMENT": "衡平推裁"
+    "NEUVILLETTE_EQUITABLE_JUDGMENT": "衡平推裁",
+    "FURINA_SALON_SOLITAIRE": "孤心沙龙"
   },
   "AUTO": {
     "CALC": "计算",
