--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -395,7 +395,8 @@
     "TRAVELER_TORRENT_SURGE": "Torrent Surge",
     "TRAVELER_DEWDROP": "Dewdrop",
     "WRIOTHESLEY_REBUKE": "Rebuke: Vaulting Fist",
-    "NEUVILLETTE_EQUITABLE_JUDGMENT": "Equitable Judgment"
+    "NEUVILLETTE_EQUITABLE_JUDGMENT": "Equitable Judgment",
+    "FURINA_SALON_SOLITAIRE": "Salon Solitaire"
   },
   "AUTO": {
     "CALC": "Calculate",
