--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -395,7 +395,8 @@
     "TRAVELER_TORRENT_SURGE": "飛散する激流",
     "TRAVELER_DEWDROP": "露雫",
     "WRIOTHESLEY_REBUKE": "誅罰",
-    "NEUVILLETTE_EQUITABLE_JUDGMENT": "衡平な裁量"
+    "NEUVILLETTE_EQUITABLE_JUDGMENT": "衡平な裁量",
+    "FURINA_SALON_SOLITAIRE": "サロン·ソリティア"
   },
   "AUTO": {
     "CALC": "計算",
