--- a/src/assets/i18n/cn_tra.json
+++ b/src/assets/i18n/cn_tra.json
@@ -395,7 +395,8 @@
     "TRAVELER_TORRENT_SURGE": "噴發激流",
     "TRAVELER_DEWDROP": "露滴",
     "WRIOTHESLEY_REBUKE": "懲戒·凌躍拳",
-    "NEUVILLETTE_EQUITABLE_JUDGMENT": "衡平推裁"
+    "NEUVILLETTE_EQUITABLE_JUDGMENT": "衡平推裁",
+    "FURINA_SALON_SOLITAIRE": "孤心沙龍"
   },
   "AUTO": {
     "CALC": "計算",
