--- a/src/assets/i18n/cn_tra.json
+++ b/src/assets/i18n/cn_tra.json
@@ -396,7 +396,8 @@
     "TRAVELER_DEWDROP": "露滴",
     "WRIOTHESLEY_REBUKE": "懲戒·凌躍拳",
     "NEUVILLETTE_EQUITABLE_JUDGMENT": "衡平推裁",
-    "FURINA_SALON_SOLITAIRE": "孤心沙龍"
+    "FURINA_SALON_SOLITAIRE": "孤心沙龍",
+    "FURINA_NORMAL_C6": "獨舞之邀"
   },
   "AUTO": {
     "CALC": "計算",
