--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -396,7 +396,8 @@
     "TRAVELER_DEWDROP": "露雫",
     "WRIOTHESLEY_REBUKE": "誅罰",
     "NEUVILLETTE_EQUITABLE_JUDGMENT": "衡平な裁量",
-    "FURINA_SALON_SOLITAIRE": "サロン·ソリティア"
+    "FURINA_SALON_SOLITAIRE": "サロン·ソリティア",
+    "FURINA_NORMAL_C6": "ソリストの誘い"
   },
   "AUTO": {
     "CALC": "計算",
