--- a/src/assets/i18n/cn_sim.json
+++ b/src/assets/i18n/cn_sim.json
@@ -396,7 +396,8 @@
     "TRAVELER_DEWDROP": "露滴",
     "WRIOTHESLEY_REBUKE": "惩戒·凌跃拳",
     "NEUVILLETTE_EQUITABLE_JUDGMENT": "衡平推裁",
-    "FURINA_SALON_SOLITAIRE": "孤心沙龙"
+    "FURINA_SALON_SOLITAIRE": "孤心沙龙",
+    "FURINA_NORMAL_C6": "独舞之邀"
   },
   "AUTO": {
     "CALC": "计算",
