--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -396,7 +396,8 @@
     "TRAVELER_DEWDROP": "Dewdrop",
     "WRIOTHESLEY_REBUKE": "Rebuke: Vaulting Fist",
     "NEUVILLETTE_EQUITABLE_JUDGMENT": "Equitable Judgment",
-    "FURINA_SALON_SOLITAIRE": "Salon Solitaire"
+    "FURINA_SALON_SOLITAIRE": "Salon Solitaire",
+    "FURINA_NORMAL_C6": "Soloist's Solicitation"
   },
   "AUTO": {
     "CALC": "Calculate",
