--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -467,6 +467,9 @@
     "MANUAL": {
       "TITLE": "Guide",
       "OK": "Confirm"
+    },
+    "ANALYTICS": {
+      "TITLE": "Access Analysis"
     }
   },
   "COMMON": {
