--- a/src/assets/i18n/cn_sim.json
+++ b/src/assets/i18n/cn_sim.json
@@ -397,7 +397,8 @@
     "WRIOTHESLEY_REBUKE": "惩戒·凌跃拳",
     "NEUVILLETTE_EQUITABLE_JUDGMENT": "衡平推裁",
     "FURINA_SALON_SOLITAIRE": "孤心沙龙",
-    "FURINA_NORMAL_C6": "独舞之邀"
+    "FURINA_NORMAL_C6": "独舞之邀",
+    "NAVIA_SHARDSHOT": "玫瑰晶弹"
   },
   "AUTO": {
     "CALC": "计算",
@@ -445,12 +446,18 @@
     "WEAPON_NAME": "[武器]",
     "ARTIFACT_NAME": "[圣遗物]"
   },
-  "DESC":{
-    "GOLDEN_MAJESTY":{
-      "WITH_SHIELD": "护盾情况下的加成（与上一个BUFF选择其一设置）"
+  "BUFF": {
+    "GOLDEN_MAJESTY_SHIELD": {
+      "DESC": "护盾情况下的加成（与上一个BUFF选择其一设置）"
     },
-    "TRAVELER":{
-      "PROUDSKILL_2": "吸收丰穰勾玉数额外的加成充能（单位：个）"
+    "TRAVELER_PROUDSKILL_2": {
+      "DESC": "吸收丰穰勾玉数额外的加成充能（单位：个）"
+    },
+    "NAVIA_STACKS_OF_CRYSTAL": {
+      "TITLE": "裂晶弹片"
+    },
+    "NAVIA_ROSULA_SHARDSHOTS": {
+      "TITLE": "玫瑰晶弹"
     }
   },
   "MENU":{
