Update i18n NAVIA_ROSULA_SHARDSHOTS

--- a/src/assets/i18n/cn_sim.json
+++ b/src/assets/i18n/cn_sim.json
@@ -457,7 +457,7 @@
       "TITLE": "裂晶弹片"
     },
     "NAVIA_ROSULA_SHARDSHOTS": {
-      "TITLE": "玫瑰晶弹"
+      "TITLE": "玫瑰晶弹（命中）"
     }
   },
   "MENU":{
