--- a/src/assets/i18n/cn_tra.json
+++ b/src/assets/i18n/cn_tra.json
@@ -457,7 +457,7 @@
       "TITLE": "裂晶彈片"
     },
     "NAVIA_ROSULA_SHARDSHOTS": {
-      "TITLE": "玫瑰晶彈"
+      "TITLE": "玫瑰晶彈（命中）"
     }
   },
   "MENU": {
