--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -457,7 +457,7 @@
       "TITLE": "Stacks of Crystal"
     },
     "NAVIA_ROSULA_SHARDSHOTS": {
-      "TITLE": "Rosula Shardshots"
+      "TITLE": "Rosula Shardshots (Hit)"
     }
   },
   "MENU": {
