--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -457,7 +457,7 @@
       "TITLE": "裂晶の欠片"
     },
     "NAVIA_ROSULA_SHARDSHOTS": {
-      "TITLE": "ロースラ晶弾"
+      "TITLE": "ロースラ晶弾（命中）"
     }
   },
   "MENU": {
