--- a/src/assets/i18n/cn_tra.json
+++ b/src/assets/i18n/cn_tra.json
@@ -398,7 +398,8 @@
     "NEUVILLETTE_EQUITABLE_JUDGMENT": "衡平推裁",
     "FURINA_SALON_SOLITAIRE": "孤心沙龍",
     "FURINA_NORMAL_C6": "獨舞之邀",
-    "NAVIA_SHARDSHOT": "玫瑰晶彈"
+    "NAVIA_SHARDSHOT": "玫瑰晶彈",
+    "GAMING_BESTIAL_ASCENT": "瑞獸登高樓"
   },
   "AUTO": {
     "CALC": "計算",
