--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -398,7 +398,8 @@
     "NEUVILLETTE_EQUITABLE_JUDGMENT": "Equitable Judgment",
     "FURINA_SALON_SOLITAIRE": "Salon Solitaire",
     "FURINA_NORMAL_C6": "Soloist's Solicitation",
-    "NAVIA_SHARDSHOT": "Rosula Shardshot"
+    "NAVIA_SHARDSHOT": "Rosula Shardshot",
+    "GAMING_BESTIAL_ASCENT": "Bestial Ascent"
   },
   "AUTO": {
     "CALC": "Calculate",
