--- a/src/assets/i18n/cn_sim.json
+++ b/src/assets/i18n/cn_sim.json
@@ -398,7 +398,8 @@
     "NEUVILLETTE_EQUITABLE_JUDGMENT": "衡平推裁",
     "FURINA_SALON_SOLITAIRE": "孤心沙龙",
     "FURINA_NORMAL_C6": "独舞之邀",
-    "NAVIA_SHARDSHOT": "玫瑰晶弹"
+    "NAVIA_SHARDSHOT": "玫瑰晶弹",
+    "GAMING_BESTIAL_ASCENT": "瑞兽登高楼"
   },
   "AUTO": {
     "CALC": "计算",
