--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -398,7 +398,8 @@
     "NEUVILLETTE_EQUITABLE_JUDGMENT": "衡平な裁量",
     "FURINA_SALON_SOLITAIRE": "サロン·ソリティア",
     "FURINA_NORMAL_C6": "ソリストの誘い",
-    "NAVIA_SHARDSHOT": "ロースラ晶弾"
+    "NAVIA_SHARDSHOT": "ロースラ晶弾",
+    "GAMING_BESTIAL_ASCENT": "瑞獣登楼"
   },
   "AUTO": {
     "CALC": "計算",
