--- a/src/assets/i18n/cn_sim.json
+++ b/src/assets/i18n/cn_sim.json
@@ -318,6 +318,59 @@
       "DMG_BONUS_PYRO": "火元素附魔",
       "DMG_BONUS_HYDRO": "水元素附魔",
       "DMG_BONUS_DENDRO": "草元素附魔"
+    },
+    "PROCESS": {
+      "DMG_DMG_SECTION": "基础乘区",
+      "DMG_CRITE_RATE": "暴击率乘区",
+      "DMG_CRITE_DMG": "暴击乘区",
+      "DMG_CRITE_EXPECT": "期望乘区",
+      "DMG_DMG_UP": "增伤乘区",
+      "DMG_DMG_ANTI": "减抗乘区",
+      "DMG_DMG_ANTI_ONLY_MINUS": "减抗乘区(仅减抗)",
+      "DMG_DEFENCE_SECTION": "防御乘区",
+      "DMG_CRYO_ANTI": "冰伤减抗乘区",
+      "DMG_ANEMO_ANTI": "风伤减抗乘区",
+      "DMG_PHYSICAL_ANTI": "物理减抗乘区",
+      "DMG_ELECTRO_ANTI": "雷伤减抗乘区",
+      "DMG_GEO_ANTI": "岩伤减抗乘区",
+      "DMG_PYRO_ANTI": "火伤减抗乘区",
+      "DMG_HYDRO_ANTI": "水伤减抗乘区",
+      "DMG_DENDRO_ANTI": "草伤减抗乘区",
+      "DMG_VAPORIZE_RATE": "蒸发増幅乘区",
+      "DMG_MELT_RATE": "融化増幅乘区",
+      "DMG_BURNING_BASE": "燃烧基础乘区",
+      "DMG_BURNING_RATE": "燃烧増幅乘区",
+      "DMG_SUPERCONDUCT_BASE": "超导基础乘区",
+      "DMG_SUPERCONDUCT_RATE": "超导増幅乘区",
+      "DMG_SWIRL_BASE": "扩散基础乘区",
+      "DMG_SWIRL_RATE": "扩散増幅乘区",
+      "DMG_SWIRL_ELECTRO_AGGRAVATE_BASE": "扩散(超激化)基础乘区",
+      "DMG_SWIRL_ELECTRO_AGGRAVATE_RATE": "扩散(超激化)基础乘区",
+      "DMG_ELECTRO_CHARGED_BASE": "感电基础乘区",
+      "DMG_ELECTRO_CHARGED_RATE": "感电増幅乘区",
+      "DMG_DESTRUCTION_BASE": "破冰基础乘区",
+      "DMG_DESTRUCTION_RATE": "破冰増幅乘区",
+      "DMG_OVERLOADED_BASE": "超载基础乘区",
+      "DMG_OVERLOADED_RATE": "超载増幅乘区",
+      "DMG_SHIELD_BASE": "结晶基础乘区",
+      "DMG_SHIELD_RATE": "结晶増幅乘区",
+      "DMG_AGGRAVATE_BASE": "超激化基础乘区",
+      "DMG_SPREAD_BASE": "蔓激化基础乘区",
+      "DMG_HYPER_BLOOM_BASE": "超绽放基础乘区",
+      "DMG_HYPER_BLOOM_RATE": "超绽放増幅乘区",
+      "DMG_BURGEON_BASE": "烈绽放基础乘区",
+      "DMG_BURGEON_RATE": "烈绽放増幅乘区",
+      "DMG_RUPTURE_BASE": "绽放基础乘区",
+      "DMG_RUPTURE_RATE": "绽放増幅乘区",
+      "DMG_SHIELD_SPECIAL_RATE": "对应元素乘区",
+      "HEALING_BASE": "治疗基础乘区",
+      "HEALING_UP": "治疗加成乘区",
+      "SHIELD_BASE": "护盾基础乘区",
+      "SHIELD_SPECIAL_UP": "特殊技能乘区",
+      "SHIELD_COMMON_UP": "护盾强效乘区",
+      "SHIELD_SPECIAL_ELEMENT_ABS": "对应元素吸收乘区",
+      "SHIELD_GEO_ELEMENT_ABS": "全元素吸收乘区",
+      "PRODUCT_BASE": "生成物生命值基础乘区"
     }
   },
   "ENKA": {
