--- a/src/assets/i18n/cn_tra.json
+++ b/src/assets/i18n/cn_tra.json
@@ -318,6 +318,59 @@
       "DMG_BONUS_PYRO": "火元素附魔",
       "DMG_BONUS_HYDRO": "水元素附魔",
       "DMG_BONUS_DENDRO": "草元素附魔"
+    },
+    "PROCESS": {
+      "DMG_DMG_SECTION": "基礎乘區",
+      "DMG_CRITE_RATE": "暴擊率乘區",
+      "DMG_CRITE_DMG": "暴擊乘區",
+      "DMG_CRITE_EXPECT": "期望乘區",
+      "DMG_DMG_UP": "增傷乘區",
+      "DMG_DMG_ANTI": "減抗乘區",
+      "DMG_DMG_ANTI_ONLY_MINUS": "減抗乘區(僅減抗)",
+      "DMG_DEFENCE_SECTION": "防禦乘區",
+      "DMG_CRYO_ANTI": "冰傷減抗乘區",
+      "DMG_ANEMO_ANTI": "風傷減抗乘區",
+      "DMG_PHYSICAL_ANTI": "物理減抗乘區",
+      "DMG_ELECTRO_ANTI": "雷傷減抗乘區",
+      "DMG_GEO_ANTI": "岩傷減抗乘區",
+      "DMG_PYRO_ANTI": "火傷減抗乘區",
+      "DMG_HYDRO_ANTI": "水傷減抗乘區",
+      "DMG_DENDRO_ANTI": "草傷減抗乘區",
+      "DMG_VAPORIZE_RATE": "蒸發増幅乘區",
+      "DMG_MELT_RATE": "融化増幅乘區",
+      "DMG_BURNING_BASE": "燃燒基礎乘區",
+      "DMG_BURNING_RATE": "燃燒増幅乘區",
+      "DMG_SUPERCONDUCT_BASE": "超導基礎乘區",
+      "DMG_SUPERCONDUCT_RATE": "超導増幅乘區",
+      "DMG_SWIRL_BASE": "擴散基礎乘區",
+      "DMG_SWIRL_RATE": "擴散増幅乘區",
+      "DMG_SWIRL_ELECTRO_AGGRAVATE_BASE": "擴散(超激化)基礎乘區",
+      "DMG_SWIRL_ELECTRO_AGGRAVATE_RATE": "擴散(超激化)基礎乘區",
+      "DMG_ELECTRO_CHARGED_BASE": "感電基礎乘區",
+      "DMG_ELECTRO_CHARGED_RATE": "感電増幅乘區",
+      "DMG_DESTRUCTION_BASE": "破冰基礎乘區",
+      "DMG_DESTRUCTION_RATE": "破冰増幅乘區",
+      "DMG_OVERLOADED_BASE": "超載基礎乘區",
+      "DMG_OVERLOADED_RATE": "超載増幅乘區",
+      "DMG_SHIELD_BASE": "結晶基礎乘區",
+      "DMG_SHIELD_RATE": "結晶増幅乘區",
+      "DMG_AGGRAVATE_BASE": "超激化基礎乘區",
+      "DMG_SPREAD_BASE": "蔓激化基礎乘區",
+      "DMG_HYPER_BLOOM_BASE": "超綻放基礎乘區",
+      "DMG_HYPER_BLOOM_RATE": "超綻放増幅乘區",
+      "DMG_BURGEON_BASE": "烈綻放基礎乘區",
+      "DMG_BURGEON_RATE": "烈綻放増幅乘區",
+      "DMG_RUPTURE_BASE": "綻放基礎乘區",
+      "DMG_RUPTURE_RATE": "綻放増幅乘區",
+      "DMG_SHIELD_SPECIAL_RATE": "對應元素乘區",
+      "HEALING_BASE": "治療基礎乘區",
+      "HEALING_UP": "治療加成乘區",
+      "SHIELD_BASE": "護盾基礎乘區",
+      "SHIELD_SPECIAL_UP": "特殊技能乘區",
+      "SHIELD_COMMON_UP": "護盾強效乘區",
+      "SHIELD_SPECIAL_ELEMENT_ABS": "對應元素吸收乘區",
+      "SHIELD_GEO_ELEMENT_ABS": "全元素吸收乘區",
+      "PRODUCT_BASE": "生成物生命值基礎乘區"
     }
   },
   "ENKA": {
