--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -318,6 +318,59 @@
       "DMG_BONUS_PYRO": "Pyro",
       "DMG_BONUS_HYDRO": "Hydro",
       "DMG_BONUS_DENDRO": "Dendro"
+    },
+    "PROCESS": {
+      "DMG_DMG_SECTION": "Basic Section",
+      "DMG_CRITE_RATE": "Critical Rate Section",
+      "DMG_CRITE_DMG": "Critical DMG Section",
+      "DMG_CRITE_EXPECT": "Expected Section",
+      "DMG_DMG_UP": "DMG Bonus Section",
+      "DMG_DMG_ANTI": "DMG Resist. Section",
+      "DMG_DMG_ANTI_ONLY_MINUS": "DMG Resist. Section (Resist. Only)",
+      "DMG_DEFENCE_SECTION": "Defense Section",
+      "DMG_CRYO_ANTI": "Cryo Resist. Section",
+      "DMG_ANEMO_ANTI": "Anemo Resist. Section",
+      "DMG_PHYSICAL_ANTI": "Physical Resist. Section",
+      "DMG_ELECTRO_ANTI": "Electro Resist. Section",
+      "DMG_GEO_ANTI": "Geo Resist. Section",
+      "DMG_PYRO_ANTI": "Pyro Resist. Section",
+      "DMG_HYDRO_ANTI": "Hydro Resist. Section",
+      "DMG_DENDRO_ANTI": "Dendro Resist. Section",
+      "DMG_VAPORIZE_RATE": "Vaporize Up Section",
+      "DMG_MELT_RATE": "Melt Up Section",
+      "DMG_BURNING_BASE": "Burning Base Section",
+      "DMG_BURNING_RATE": "Burning Up Section",
+      "DMG_SUPERCONDUCT_BASE": "Superconduct Base Section",
+      "DMG_SUPERCONDUCT_RATE": "Superconduct Up Section",
+      "DMG_SWIRL_BASE": "Swirl Base Section",
+      "DMG_SWIRL_RATE": "Swirl Up Section",
+      "DMG_SWIRL_ELECTRO_AGGRAVATE_BASE": "Swirl (Electro Aggravate) Base Section",
+      "DMG_SWIRL_ELECTRO_AGGRAVATE_RATE": "Swirl (Electro Aggravate) Up Section",
+      "DMG_ELECTRO_CHARGED_BASE": "Electro-Charged Base Section",
+      "DMG_ELECTRO_CHARGED_RATE": "Electro-Charged Up Section",
+      "DMG_DESTRUCTION_BASE": "Superconduct Base Section",
+      "DMG_DESTRUCTION_RATE": "Superconduct Up Section",
+      "DMG_OVERLOADED_BASE": "Overloaded Base Section",
+      "DMG_OVERLOADED_RATE": "Overloaded Up Section",
+      "DMG_SHIELD_BASE": "Shield Base Section",
+      "DMG_SHIELD_RATE": "Shield Up Section",
+      "DMG_AGGRAVATE_BASE": "Aggravate Base Section",
+      "DMG_SPREAD_BASE": "Spread Base Section",
+      "DMG_HYPER_BLOOM_BASE": "Hyper Bloom Base Section",
+      "DMG_HYPER_BLOOM_RATE": "Hyper Bloom Up Section",
+      "DMG_BURGEON_BASE": "Burgeon Base Section",
+      "DMG_BURGEON_RATE": "Burgeon Up Section",
+      "DMG_RUPTURE_BASE": "Rupture Base Section",
+      "DMG_RUPTURE_RATE": "Rupture Up Section",
+      "DMG_SHIELD_SPECIAL_RATE": "Corresponding Element Section",
+      "HEALING_BASE": "Healing Base Section",
+      "HEALING_UP": "Healing Bonus Section",
+      "SHIELD_BASE": "Shield Base Section",
+      "SHIELD_SPECIAL_UP": "Special Skill Bonus Section",
+      "SHIELD_COMMON_UP": "Shield Bonus Section",
+      "SHIELD_SPECIAL_ELEMENT_ABS": "Corresponding Element Absorption Section",
+      "SHIELD_GEO_ELEMENT_ABS": "All Element Absorption Section",
+      "PRODUCT_BASE": "Production HP Base Section"
     }
   },
   "ENKA": {
