--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -318,6 +318,59 @@
       "DMG_BONUS_PYRO": "火",
       "DMG_BONUS_HYDRO": "水",
       "DMG_BONUS_DENDRO": "草"
+    },
+    "PROCESS": {
+      "DMG_DMG_SECTION": "基本エリア",
+      "DMG_CRITE_RATE": "クリティカル率エリア",
+      "DMG_CRITE_DMG": "クリティカルダメージエリア",
+      "DMG_CRITE_EXPECT": "クリティカル期待値エリア",
+      "DMG_DMG_UP": "ダメージ増加エリア",
+      "DMG_DMG_ANTI": "耐性エリア",
+      "DMG_DMG_ANTI_ONLY_MINUS": "耐性エリア(マイナスのみ)",
+      "DMG_DEFENCE_SECTION": "防御エリア",
+      "DMG_CRYO_ANTI": "氷耐性エリア",
+      "DMG_ANEMO_ANTI": "風耐性エリア",
+      "DMG_PHYSICAL_ANTI": "物理耐性エリア",
+      "DMG_ELECTRO_ANTI": "雷耐性エリア",
+      "DMG_GEO_ANTI": "岩耐性エリア",
+      "DMG_PYRO_ANTI": "火耐性エリア",
+      "DMG_HYDRO_ANTI": "水耐性エリア",
+      "DMG_DENDRO_ANTI": "草耐性エリア",
+      "DMG_VAPORIZE_RATE": "蒸発増幅エリア",
+      "DMG_MELT_RATE": "溶解増幅エリア",
+      "DMG_BURNING_BASE": "燃焼基本エリア",
+      "DMG_BURNING_RATE": "燃焼増幅エリア",
+      "DMG_SUPERCONDUCT_BASE": "超電導基本エリア",
+      "DMG_SUPERCONDUCT_RATE": "超電導増幅エリア",
+      "DMG_SWIRL_BASE": "拡散基本エリア",
+      "DMG_SWIRL_RATE": "拡散増幅エリア",
+      "DMG_SWIRL_ELECTRO_AGGRAVATE_BASE": "拡散(超激化)基本エリア",
+      "DMG_SWIRL_ELECTRO_AGGRAVATE_RATE": "拡散(超激化)増幅エリア",
+      "DMG_ELECTRO_CHARGED_BASE": "感電基本エリア",
+      "DMG_ELECTRO_CHARGED_RATE": "感電増幅エリア",
+      "DMG_DESTRUCTION_BASE": "氷砕き基本エリア",
+      "DMG_DESTRUCTION_RATE": "氷砕き増幅エリア",
+      "DMG_OVERLOADED_BASE": "過負荷基本エリア",
+      "DMG_OVERLOADED_RATE": "過負荷増幅エリア",
+      "DMG_SHIELD_BASE": "結晶基本エリア",
+      "DMG_SHIELD_RATE": "結晶増幅エリア",
+      "DMG_AGGRAVATE_BASE": "超激化基本エリア",
+      "DMG_SPREAD_BASE": "拡激化基本エリア",
+      "DMG_HYPER_BLOOM_BASE": "超開花基本エリア",
+      "DMG_HYPER_BLOOM_RATE": "超開花増幅エリア",
+      "DMG_BURGEON_BASE": "烈開花基本エリア",
+      "DMG_BURGEON_RATE": "烈開花増幅エリア",
+      "DMG_RUPTURE_BASE": "開花基本エリア",
+      "DMG_RUPTURE_RATE": "開花増幅エリア",
+      "DMG_SHIELD_SPECIAL_RATE": "対応元素エリア",
+      "HEALING_BASE": "治療基本エリア",
+      "HEALING_UP": "治療増加エリア",
+      "SHIELD_BASE": "シールド基本エリア",
+      "SHIELD_SPECIAL_UP": "特殊スキルエリア",
+      "SHIELD_COMMON_UP": "シールド強化エリア",
+      "SHIELD_SPECIAL_ELEMENT_ABS": "対応元素吸収エリア",
+      "SHIELD_GEO_ELEMENT_ABS": "全元素吸収エリア",
+      "PRODUCT_BASE": "生成物の生命値基本エリア"
     }
   },
   "ENKA": {
