--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -454,7 +454,9 @@
     "FURINA_SALON_SOLITAIRE": "Salon Solitaire",
     "FURINA_NORMAL_C6": "Soloist's Solicitation",
     "NAVIA_SHARDSHOT": "Rosula Shardshot",
-    "GAMING_BESTIAL_ASCENT": "Bestial Ascent"
+    "GAMING_BESTIAL_ASCENT": "Bestial Ascent",
+    "SETHOS_DUSK_BOLTS": "Dusk Bolts",
+    "SETHOS_SHADOWPIERCING_SHOTS": "Shadowpiercing Shots"
   },
   "AUTO": {
     "CALC": "Calculate",
@@ -530,6 +532,15 @@
     },
     "BOND_OF_LIFE": {
       "TITLE": "Bond of Life"
+    },
+    "BOLSTERING_BUBBLEBALM": {
+      "TITLE": "Level of Bubblebalm"
+    },
+    "SOURCEWATER": {
+      "TITLE": "Sourcewater"
+    },
+    "HEALING_HP": {
+      "TITLE": "Amount of Healing"
     }
   },
   "MENU": {
