--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -454,7 +454,9 @@
     "FURINA_SALON_SOLITAIRE": "サロン·ソリティア",
     "FURINA_NORMAL_C6": "ソリストの誘い",
     "NAVIA_SHARDSHOT": "ロースラ晶弾",
-    "GAMING_BESTIAL_ASCENT": "瑞獣登楼"
+    "GAMING_BESTIAL_ASCENT": "瑞獣登楼",
+    "SETHOS_DUSK_BOLTS": "瞑弦の矢",
+    "SETHOS_SHADOWPIERCING_SHOTS": "貫影の矢"
   },
   "AUTO": {
     "CALC": "計算",
@@ -530,6 +532,15 @@
     },
     "BOND_OF_LIFE": {
       "TITLE": "命の契約"
+    },
+    "BOLSTERING_BUBBLEBALM": {
+      "TITLE": "ヒーリングバブル段階"
+    },
+    "SOURCEWATER": {
+      "TITLE": "源水の雫"
+    },
+    "HEALING_HP": {
+      "TITLE": "回復量"
     }
   },
   "MENU": {
