--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -456,7 +456,8 @@
     "NAVIA_SHARDSHOT": "Rosula Shardshot",
     "GAMING_BESTIAL_ASCENT": "Bestial Ascent",
     "SETHOS_DUSK_BOLTS": "Dusk Bolts",
-    "SETHOS_SHADOWPIERCING_SHOTS": "Shadowpiercing Shots"
+    "SETHOS_SHADOWPIERCING_SHOTS": "Shadowpiercing Shots",
+    "EMILIE_CLEARDEW_COLOGNE": "Cleardew Cologne"
   },
   "AUTO": {
     "CALC": "Calculate",
