--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -456,7 +456,8 @@
     "NAVIA_SHARDSHOT": "ロースラ晶弾",
     "GAMING_BESTIAL_ASCENT": "瑞獣登楼",
     "SETHOS_DUSK_BOLTS": "瞑弦の矢",
-    "SETHOS_SHADOWPIERCING_SHOTS": "貫影の矢"
+    "SETHOS_SHADOWPIERCING_SHOTS": "貫影の矢",
+    "EMILIE_CLEARDEW_COLOGNE": "清露コロン"
   },
   "AUTO": {
     "CALC": "計算",
