--- a/src/assets/i18n/cn_sim.json
+++ b/src/assets/i18n/cn_sim.json
@@ -456,7 +456,8 @@
     "NAVIA_SHARDSHOT": "玫瑰晶弹",
     "GAMING_BESTIAL_ASCENT": "瑞兽登高楼",
     "SETHOS_DUSK_BOLTS": "瞑弦矢",
-    "SETHOS_SHADOWPIERCING_SHOTS": "贯影箭"
+    "SETHOS_SHADOWPIERCING_SHOTS": "贯影箭",
+    "EMILIE_CLEARDEW_COLOGNE": "清露香氛"
   },
   "AUTO": {
     "CALC": "计算",
