--- a/src/assets/i18n/cn_tra.json
+++ b/src/assets/i18n/cn_tra.json
@@ -456,7 +456,8 @@
     "NAVIA_SHARDSHOT": "玫瑰晶彈",
     "GAMING_BESTIAL_ASCENT": "瑞獸登高樓",
     "SETHOS_DUSK_BOLTS": "瞑弦矢",
-    "SETHOS_SHADOWPIERCING_SHOTS": "貫影箭"
+    "SETHOS_SHADOWPIERCING_SHOTS": "貫影箭",
+    "EMILIE_CLEARDEW_COLOGNE": "清露香氛"
   },
   "AUTO": {
     "CALC": "計算",
