--- a/src/assets/i18n/cn_sim.json
+++ b/src/assets/i18n/cn_sim.json
@@ -457,7 +457,9 @@
     "GAMING_BESTIAL_ASCENT": "瑞兽登高楼",
     "SETHOS_DUSK_BOLTS": "瞑弦矢",
     "SETHOS_SHADOWPIERCING_SHOTS": "贯影箭",
-    "EMILIE_CLEARDEW_COLOGNE": "清露香氛"
+    "EMILIE_CLEARDEW_COLOGNE": "清露香氛",
+    "KINICH_SCALESPIKER_CANNON": "迴猎贯鳞炮",
+    "MUALANI_SHARKY_BITE": "鲨鲨撕咬"
   },
   "AUTO": {
     "CALC": "计算",
@@ -542,6 +544,12 @@
     },
     "HEALING_HP": {
       "TITLE": "治疗量"
+    },
+    "WAVE_MOMENTUM": {
+      "TITLE": "浪势充能"
+    },
+    "PREY_MARKED": {
+      "TITLE": "猎物标记"
     }
   },
   "MENU": {
