--- a/src/assets/i18n/cn_tra.json
+++ b/src/assets/i18n/cn_tra.json
@@ -458,8 +458,8 @@
     "SETHOS_DUSK_BOLTS": "瞑弦矢",
     "SETHOS_SHADOWPIERCING_SHOTS": "貫影箭",
     "EMILIE_CLEARDEW_COLOGNE": "清露香氛",
-    "KINICH_SCALESPIKER_CANNON": "",
-    "MUALANI_SHARKY_BITE": ""
+    "KINICH_SCALESPIKER_CANNON": "迴獵貫鱗炮",
+    "MUALANI_SHARKY_BITE": "鯊鯊撕咬"
   },
   "AUTO": {
     "CALC": "計算",
@@ -546,10 +546,10 @@
       "TITLE": "治療量"
     },
     "WAVE_MOMENTUM": {
-      "TITLE": ""
+      "TITLE": "浪勢充能"
     },
     "PREY_MARKED": {
-      "TITLE": ""
+      "TITLE": "獵物標記"
     }
   },
   "MENU": {
